--- a/compose.yml
+++ b/compose.yml
@@ -1,6 +1,6 @@
 services:
   nginx:
-    container_name: kagimc_nginx
+    container_name: kajimc_nginx
     image: nginx:alpine
     ports:
       - "80:80"
@@ -11,6 +11,7 @@ services:
     restart: unless-stopped
     environment:
       NAME1: ${NAME1}
+      NAME2: ${NAME2}
       TZ: ${TZ}
       PUID: ${PUID}
       PGID: ${PGID}
@@ -42,6 +43,40 @@ services:
         - proxy-network
     depends_on:
         - nginx
+
+  kajiedi-frontend:
+    container_name: kajiedi_frontend
+    build:
+      context: ./kajiedi/frontend
+    expose:
+      - "80"
+    networks:
+      - proxy-network
+    depends_on:
+      - nginx
+    restart: unless-stopped
+
+  kajiedi-backend:
+    container_name: kajiedi_backend
+    build:
+      context: ./kajiedi/backend
+    environment:
+      TZ: ${TZ}
+      PUID: ${PUID}
+      PGID: ${PGID}
+    volumes:
+      - ${LUA_DIR}:/lua/computer
+      - ./logs/kajiedi:/app/logs
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
+    networks:
+      - proxy-network
+    depends_on:
+      - nginx
+    restart: unless-stopped
 
 networks:
   proxy-network:
