--- a/nginx/templates/kajipanel.conf.template
+++ b/nginx/templates/kajipanel.conf.template
@@ -3,6 +3,8 @@ server {
     server_name ${NAME1};
 
     location / {
+        add_header X-Robots-Tag "noindex" always;
+        server_tokens off;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
