--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,6 @@
 NAME1=server_name(nginx_domein)
 NAME2=server_name(nginx_domein)
+NAME3=server_name(nginx_domein)
 PUID=1000
 PGID=1000
 TZ=Asia/Tokyo
